main/common/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: replace
  template:
    metadata:
      labels:
        app: replace
    spec:
      imagePullSecrets:  # Add this section for image pull secrets
      - name: regcred
      containers:
      - name: replace
        image: replace
        ports:
          - containerPort: 8080
        livenessProbe:      # Used by deployment controller
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:     # Used by Ingress/GCLB
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 256Mi
