main/common/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: replace
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: replace
  type: NodePort
