main/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${environment}app
spec:
  defaultBackend:
    service:
      name: ${environment}app
      port:
        number: 80
